--- a/requirements.txt
+++ b/requirements.txt
@@ -171,6 +171,7 @@ terminado=0.17.1=py313hca03da5_0
 tinycss2=1.4.0=py313hca03da5_0
 tk=8.6.14=h6ba3021_0
 tornado=6.4.2=py313h80987f9_0
+tqdm=4.67.1=pypi_0
 traitlets=5.14.3=py313hca03da5_0
 typing-extensions=4.12.2=py313hca03da5_0
 typing_extensions=4.12.2=py313hca03da5_0
